--- a/Laby/Gemfile
+++ b/Laby/Gemfile
@@ -55,7 +55,7 @@ group :test do
   # Easy installation and use of web drivers to run system tests with browsers
   gem 'webdrivers'
   gem 'rspec-rails'
-  gem 'byebug', platform: :mri
+  gem 'pry-byebug'
 end
 
 group :development, :test do
